--- a/index.html
+++ b/index.html
@@ -7,57 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="page-nav">
-        <h1>mi tienda</h1>
+    <header>
+        <nav>
+            <h1 id="logo">SAVIPROD</h1>
+            <ul>
+                <li><a href="">INICIO</a></li>
+                <li><a href="productos.html">PRODUCTOS</a></li>
+                <li><a href="">OPCIONES</a></li>
+                <li><a href="">AYUDA</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="registrar">
+        <a href="#" id="registrar1">REGISTRATE</a>
     </div>
-    <div class="page-content">
-        <div class="product-container">
-            <h3>nombre</h3>
-            <img src="img/iron-gym-whey-protein-25-lbs-savifar.jpg" alt="">
-            <h3>50</h3>
-            <button class="button-add">agregar</button>
-        </div>
-
-        <div class="product-container">
-            <h3>nombre</h3>
-            <img src="img/iron-gym-whey-protein-25-lbs-savifar.jpg" alt="">
-            <h3>50</h3>
-            <button class="button-add">agregar</button>
-        </div>
-
-        <div class="product-container">
-            <h3>nombre</h3>
-            <img src="img/iron-gym-whey-protein-25-lbs-savifar.jpg" alt="">
-            <h3>50</h3>
-            <button class="button-add">agregar</button>
-        </div>
-
-        <div class="product-container">
-            <h3>nombre</h3>
-            <img src="img/iron-gym-whey-protein-25-lbs-savifar.jpg" alt="">
-            <h3>50</h3>
-            <button class="button-add">agregar</button>
-        </div>
-
-        <div class="product-container">
-            <h3>nombre</h3>
-            <img src="img/iron-gym-whey-protein-25-lbs-savifar.jpg" alt="">
-            <h3>50</h3>
-            <button class="button-add">agregar</button>
-        </div>
-
-        <div class="product-container">
-            <h3>nombre</h3>
-            <img src="img/iron-gym-whey-protein-25-lbs-savifar.jpg" alt="">
-            <h3>50</h3>
-            <button class="button-add">agregar</button>
-        </div>
 
 
-    
-
-
-    </div>
     
 </body>
 </html>
