--- a/productos.html
+++ b/productos.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SAVIPROD - productos</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://w7.pngwing.com/pngs/369/574/png-transparent-computer-icons-fitness-centre-exercise-dumbbell-miscellaneous-angle-physical-fitness.png">
 </head>
 <body>
     <div class="page-nav">
