--- a/productos.html
+++ b/productos.html
@@ -8,8 +8,19 @@
     <link rel="icon" href="https://w7.pngwing.com/pngs/369/574/png-transparent-computer-icons-fitness-centre-exercise-dumbbell-miscellaneous-angle-physical-fitness.png">
 </head>
 <body>
+    <header>
+        <nav>
+            <h1 id="logo">SAVIPROD</h1>
+            <ul>
+                <li><a href="./index.html">INICIO</a></li>
+                <li><a href="productos.html">PRODUCTOS</a></li>
+                <li><a href="">OPCIONES</a></li>
+                <li><a href="">AYUDA</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="page-nav">
-        <a href="index.html"><h1>Volver a principal</h1></a>
+        <!-- <a href="index.html"><h1>Volver a principal</h1></a> -->
         <button class="buttton-checkout">Pagar</button>
     </div>
     <div class="page-content">
