--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <h1 id="logo">SAVIPROD</h1>
             <ul>
-                <li><a href="">INICIO</a></li>
+                <li><a href="./index.html">INICIO</a></li>
                 <li><a href="productos.html">PRODUCTOS</a></li>
                 <li><a href="">OPCIONES</a></li>
                 <li><a href="">AYUDA</a></li>
@@ -22,6 +22,11 @@
     <div class="registrar">
         <a href="#" id="registrar1">REGISTRATE</a>
     </div>
+
+
+    <footer>
+        
+    </footer>
 
 
     
