--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <div class="registrar">
-        <a href="#" id="registrar1">REGISTRATE</a>
+        <a href="registrar.html" id="registrar1">REGISTRATE</a>
     </div>
 
 
@@ -38,6 +38,6 @@
 
 
 
-    
+    <script src="funtions.js"></script>
 </body>
 </html>
