--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/funtions.js"></script>
 </body>
 </html>
