--- a/registrar.html
+++ b/registrar.html
@@ -16,21 +16,18 @@
     <br>
     <label >Email:
         <br>
-        <input type="text"  id="username"  placeholder="Escriba su email" autofocus>
+        <input type="text"  id="username"  placeholder="Escriba su email" >
         </label>
     <label >Contraseña:
         <br>
         <input type="password"  id="password"  placeholder="Contraseña" >
         </label>
         <a href="#" class="link">Se te olvido la contraseña?</a>
-        <button id="button" onclick="cargar()">Iniciar</button>
+        <button id="button" onclick="cargar(),load()" >Iniciar</button>
 
     </form>
 
     
-
-
-
     <script src="./js/registro1.js"></script>
 </body>
 </html>
