--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAVIPROD</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="https://w7.pngwing.com/pngs/369/574/png-transparent-computer-icons-fitness-centre-exercise-dumbbell-miscellaneous-angle-physical-fitness.png">
 </head>
 <body>
@@ -26,12 +26,16 @@
 
     <footer>
         <ul class="footer-icons">
-            <li><a href="#"><img src="https://www.facebook.com/images/fb_icon_325x325.png" alt=""></a></li>
-            <li><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1200px-Instagram_logo_2022.svg.png" alt=""></a></li>
-            <li><a href="#"><img src="https://img.freepik.com/vector-premium/nuevo-logotipo-twitter-x-2023-descarga-vector-oficial-logotipo-twitter-x_691560-10797.jpg" alt=""></a></li>
-            <li><a href="#"><img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt=""></a></li>
+            <li><a href="https://www.facebook.com/angel.urrego.520?mibextid=eHce3h"><img src="https://www.facebook.com/images/fb_icon_325x325.png" alt=""></a></li>
+            <li><a href="https://instagram.com/angel_urrego12?igshid=OGQ5ZDc2ODk2ZA=="><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1200px-Instagram_logo_2022.svg.png" alt=""></a></li>
+            <li><a href="https://x.com/AngelUrrego13?t=8-LlCHu-D65dmzQ2gYuWKg&s=08"><img src="https://img.freepik.com/vector-premium/nuevo-logotipo-twitter-x-2023-descarga-vector-oficial-logotipo-twitter-x_691560-10797.jpg" alt=""></a></li>
+            <li><a href="https://www.linkedin.com/in/angel-urrego-b93020192?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt=""></a></li>
              
         </ul>
+        <div class="footer-copyright">
+            <p>Copyright @ 2023 Angel Urrego. All Rights Reserved</p>
+
+        </div>
         
     </footer>
 
