--- a/registrar.html
+++ b/registrar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAVIPROD - registro</title>
     <link rel="icon" href="https://w7.pngwing.com/pngs/369/574/png-transparent-computer-icons-fitness-centre-exercise-dumbbell-miscellaneous-angle-physical-fitness.png">
-    <link rel="stylesheet" href="registro.css">
+    <link rel="stylesheet" href="css/registro.css">
 
 </head>
 <body>
